Validation of files

--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,12 @@
 .text{
     color: blueviolet;
 }
+
+.container
+{
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
