--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,15 @@
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+header
+{
+    text-align: center;
+    padding: 20px 0;
+}
+
+nav
+{
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+}
